# cql-study

./: .flake8  README.md  pyproject.toml
cql/: 01 keyspaces_tables.ipynb  02 composite_keys.ipynb  03 timestamps.ipynb  04 faker_data.ipynb  04 table_models.ipynb  05 cluster_of_nodes.ipynb  __main__.py  config.py  data_generator.py  db.py  queries.ipynb
cql/notebooks/: 01 keyspaces_tables.ipynb
